--- a/WebContent/homecss/creative.css
+++ b/WebContent/homecss/creative.css
@@ -8,7 +8,7 @@ html,
 body {
     width: 100%;
     height: 100%;
-    background: url('../img/bg.jpg');
+    background: url('../img/bg.png');
 }
 
 body {
@@ -98,6 +98,10 @@ aside {
     color: #eb3812;
 }
 
+.list-group-item.active, .list-group-item.active:focus, .list-group-item.active:hover{
+background-color:#5cb85c;
+border-color:#5cb85c
+}
 .navbar-default .nav > li>a,
 .navbar-default .nav>li>a:focus {
     text-transform: uppercase;
@@ -274,13 +278,25 @@ header .header-content .header-content-inner p {
     height: 100%;
     text-align: center;
     color: #fff;
-    opacity: 0;
-    background: rgba(240,95,64,.9);
+    opacity: 1;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
 }
 
+.navbar-nav
+{
+	height:80px;
+}
+
+.navbar-brand
+{
+	line-height:60px;
+}
+.navbar-nav>li>a
+{
+	line-height:60px;
+}
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
     position: absolute;
     top: 50%;
